--- a/css/wvFont.css
+++ b/css/wvFont.css
@@ -4,21 +4,22 @@
     font-style: normal;
     font-weight: 100;
     src: url('../font/notoSansKrLight/NotoSansKR-Thin.woff2') format('woff2'),
-    url('../font/notoSansKrLight/NotoSansKR-Thin.woff') format('woff'),
-    url('../font/notoSansKrLight/NotoSansKR-Thin.otf') format('opentype'),
-    url('../font/notoSansKrLight/NotoSansKR-Thin.eot'),
-    url('../font/notoSansKrLight/NotoSansKR-Thin.eot?#iefix') format('embedded-opentype');
-    
+        url('../font/notoSansKrLight/NotoSansKR-Thin.woff') format('woff'),
+        url('../font/notoSansKrLight/NotoSansKR-Thin.otf') format('opentype'),
+        url('../font/notoSansKrLight/NotoSansKR-Thin.eot'),
+        url('../font/notoSansKrLight/NotoSansKR-Thin.eot?#iefix') format('embedded-opentype');
+
 }
+
 @font-face {
     font-family: 'Noto Sans KR';
     font-style: normal;
     font-weight: 300;
     src: url('../font/notoSansKrLight/NotoSansKR-Light.woff2') format('woff2'),
-    url('../font/notoSansKrLight/NotoSansKR-Light.woff') format('woff'),
-	url('../font/notoSansKrLight/NotoSansKR-Light.otf') format('opentype'),
-	url('../font/notoSansKrLight/NotoSansKR-Light.eot'),
-    url('../font/notoSansKrLight/NotoSansKR-Light.eot?#iefix') format('embedded-opentype');
+        url('../font/notoSansKrLight/NotoSansKR-Light.woff') format('woff'),
+        url('../font/notoSansKrLight/NotoSansKR-Light.otf') format('opentype'),
+        url('../font/notoSansKrLight/NotoSansKR-Light.eot'),
+        url('../font/notoSansKrLight/NotoSansKR-Light.eot?#iefix') format('embedded-opentype');
 }
 
 @font-face {
@@ -26,10 +27,10 @@
     font-style: normal;
     font-weight: 400;
     src: url('../font/notoSansKrLight/NotoSansKR-Regular.woff2') format('woff2'),
-	url('../font/notoSansKrLight/NotoSansKR-Regular.woff') format('woff'),
-	url('../font/notoSansKrLight/NotoSansKR-Regular.otf') format('opentype'),
-	url('../font/notoSansKrLight/NotoSansKR-Regular.eot'),
-    url('../font/notoSansKrLight/NotoSansKR-Regular.eot?#iefix') format('embedded-opentype');
+        url('../font/notoSansKrLight/NotoSansKR-Regular.woff') format('woff'),
+        url('../font/notoSansKrLight/NotoSansKR-Regular.otf') format('opentype'),
+        url('../font/notoSansKrLight/NotoSansKR-Regular.eot'),
+        url('../font/notoSansKrLight/NotoSansKR-Regular.eot?#iefix') format('embedded-opentype');
 }
 
 @font-face {
@@ -37,10 +38,10 @@
     font-style: normal;
     font-weight: 500;
     src: url('../font/notoSansKrLight/NotoSansKR-Medium.woff2') format('woff2'),
-	url('../font/notoSansKrLight/NotoSansKR-Medium.woff') format('woff'),
-	url('../font/notoSansKrLight/NotoSansKR-Medium.otf') format('opentype'),
-	url('../font/notoSansKrLight/NotoSansKR-Medium.eot'),
-    url('../font/notoSansKrLight/NotoSansKR-Medium.eot?#iefix') format('embedded-opentype');
+        url('../font/notoSansKrLight/NotoSansKR-Medium.woff') format('woff'),
+        url('../font/notoSansKrLight/NotoSansKR-Medium.otf') format('opentype'),
+        url('../font/notoSansKrLight/NotoSansKR-Medium.eot'),
+        url('../font/notoSansKrLight/NotoSansKR-Medium.eot?#iefix') format('embedded-opentype');
 }
 
 @font-face {
@@ -48,10 +49,10 @@
     font-style: normal;
     font-weight: 700;
     src: url('../font/notoSansKrLight/NotoSansKR-Bold.woff2') format('woff2'),
-	url('../font/notoSansKrLight/NotoSansKR-Bold.woff') format('woff'),
-	url('../font/notoSansKrLight/NotoSansKR-Bold.otf') format('opentype'),
-	url('../font/notoSansKrLight/NotoSansKR-Bold.eot'),
-    url('../font/notoSansKrLight/NotoSansKR-Bold.eot?#iefix') format('embedded-opentype');
+        url('../font/notoSansKrLight/NotoSansKR-Bold.woff') format('woff'),
+        url('../font/notoSansKrLight/NotoSansKR-Bold.otf') format('opentype'),
+        url('../font/notoSansKrLight/NotoSansKR-Bold.eot'),
+        url('../font/notoSansKrLight/NotoSansKR-Bold.eot?#iefix') format('embedded-opentype');
 }
 
 @font-face {
@@ -59,8 +60,56 @@
     font-style: normal;
     font-weight: 900;
     src: url('../font/notoSansKrLight/NotoSansKR-Black.woff2') format('woff2'),
-	url('../font/notoSansKrLight/NotoSansKR-Black.woff') format('woff'),
-	url('../font/notoSansKrLight/NotoSansKR-Black.otf') format('opentype'),
-	url('../font/notoSansKrLight/NotoSansKR-Black.eot'),
-    url('../font/notoSansKrLight/NotoSansKR-Black.eot?#iefix') format('embedded-opentype');
+        url('../font/notoSansKrLight/NotoSansKR-Black.woff') format('woff'),
+        url('../font/notoSansKrLight/NotoSansKR-Black.otf') format('opentype'),
+        url('../font/notoSansKrLight/NotoSansKR-Black.eot'),
+        url('../font/notoSansKrLight/NotoSansKR-Black.eot?#iefix') format('embedded-opentype');
+}
+
+@font-face {
+    font-family: 'icon';
+    src: url('../font/icon/icon.eot?hb1lys');
+    src: url('../font/icon/icon.eot?hb1lys#iefix') format('embedded-opentype'),
+        url('../font/icon/icon.ttf?hb1lys') format('truetype'),
+        url('../font/icon/icon.woff?hb1lys') format('woff'),
+        url('../font/icon/icon.svg?hb1lys#icon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: 'fontcon';
+    src: url('../font/icon/fontcon.eot?6ps1va');
+    src: url('../font/icon/fontcon.eot?6ps1va#iefix') format('embedded-opentype'),
+        url('../font/icon/fontcon.ttf?6ps1va') format('truetype'),
+        url('../font/icon/fontcon.woff?6ps1va') format('woff'),
+        url('../font/icon/fontcon.svg?6ps1va#fontcon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+[class^="fontcon-"],
+[class*=" fontcon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'fontcon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.fontcon-box_icon:before {
+    content: "\e900";
+}
+
+.fontcon-arrow_movetop:before {
+    content: "\e901";
 }
