--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,12 @@ header.on nav a {color:#fff;}
 
 /*TOP BTN*/
 .top-btn {opacity: 0; pointer-events: none; position: fixed; right: 70px; bottom:35px; z-index: 2;color: #000; background-color: rgba(6,9,43,0.17);display: inline-block;width: 56px;height: 56px;display: flex;justify-content: center;align-items: center;border-radius: 50%;transition: .3s all ease-in-out;transform: translateY(160px);}
+.top-btn.white {color: #fff;}
 .top-btn.on {opacity: 1;pointer-events: auto;transform: translateY(0px);}
+.top-btn.foot {position: sticky;
+    top: 0px;
+    right: 0px;
+    left: auto;}
 
 /*COLUMN LIST*/
 .column-list {display: flex;}
