--- a/css/style.css
+++ b/css/style.css
@@ -529,14 +529,16 @@ header.on nav a {color:#fff;}
 .products .dot-bg {animation: dotScale3 0.5s infinite;animation-direction: alternate;position: absolute; top: -1px;left: -1px;width: 10px;height: 10px; display: inline-block;border-radius: 50%;background-color: #0076FF; opacity: 0.2;}
 
 /*TABLE*/
-.table-data {width: 100%; min-width: 1000px; height:50px;border-collapse: collapse;text-align: center;line-height: 45px; background-color: rgba(221,235,252,0.3);border-radius: 3px 3px 0 0;border: 1px solid #CBCBCB;}
+.table-data {position: relative; width: 100%; min-width: 1000px; height:50px;border-collapse: collapse;text-align: center;line-height: 45px; background-color: rgba(221,235,252,0.3);border-radius: 3px 3px 0 0;border: 1px solid #CBCBCB;}
 .table-data.marB {margin-bottom: 10px;}
+.table-data:before {content: ''; position: absolute; top:0; left:0; width: 1px; height: 100%; border-left: 1px solid #CBCBCB;}
+.table-data:after {content: ''; position: absolute; top:0; right:-2px; width: 1px; height: 100%; border-left: 1px solid #CBCBCB;}
 .table-data > thead th {font-size: 16px; font-weight: 500;}
 .table-data > thead tr > th {position: sticky; top: 53px;z-index: 1;word-break: keep-all; line-height: 42px; background: #F0F0F0; color: #001448;border-bottom:1px solid #CBCBCB;}
 .table-data > thead tr > th > div {position:relative;}
 .table-data > thead tr > th > div:before {content:""; height:23px; position:absolute; top:9px; left:0px; border-left:2px dotted #CBCBCB;}
 .table-data > thead tr > th:first-child > div:before {border:0px;} 
-.table-data > tbody > tr > td {padding: 12px; line-height: 20px; vertical-align: middle; font-size: 15px;border-left: 1px solid #CBCBCB;border-right: 1px solid #CBCBCB;box-sizing: border-box;}
+.table-data > tbody > tr > td {padding: 12px; line-height: 20px; vertical-align: middle; font-size: 15px;border-left: 1px solid #e7e7e7;border-right: 1px solid #e7e7e7;box-sizing: border-box;}
 .table-data > tbody > tr > td:nth-child(even) {border-left: none;}
 .table-data > tbody > tr {transition: .3s all ease;}
 .table-data > tbody > tr:hover {background-color: rgba(51,66,145,0.1);}
